--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
               </span> -->
               <!-- 代码链接 -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+                <a href="https://xenon-w.github.io/FilterGS.github.io/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code[Coming Soon]</span>
+                  <span>Code (coming soon)</span>
                 </a>
               </span>
               <!-- Dataset Link. -->
