Remove documentation markdown files

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </span> -->
               <!-- 代码链接 -->
               <span class="link-block">
-                <a href="https://xenon-w.github.io/FilterGS.github.io/"
+                <a href="https://github.com/xenon-w/FilterGS/tree/main"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
