--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="FilterGS: Traversal-Free Parallel Filtering and Adaptive Shrinkage for Large-scale LoD 3D Gaussian Splatting. Achieves state-of-the-art rendering speeds while maintaining competitive visual quality across multiple large-scale datasets.">
+  <meta name="keywords" content="FilterGS, 3D Gaussian Splatting, LoD, Level-of-Detail, Neural Rendering, Real-time Rendering, Large-scale Scenes, Parallel Filtering, Adaptive Shrinkage, Computer Graphics, 3D Reconstruction">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FilterGS: Traversal-Free Parallel Filtering and Adaptive Shrinkage for Large-scale LoD 3D Gaussian Splatting</title>
 
